--- a/style.css
+++ b/style.css
@@ -241,8 +241,7 @@ section {
 
 .btn-color-1,
 .btn-color-2:hover {
-  background: rgb(62, 6, 6);
-  color: beige;
+  color: rgb(62, 6, 6);
 }
 
 .btn-color-1:hover {
@@ -261,14 +260,19 @@ section {
   gap: 1rem;
 }
 
-.myBtn {
-  fill: rgb(62, 6, 6);
+.myBtn:hover {
+  background-color: rgb(62, 6, 6);
+  color: white;
 }
 
 /* ABOUT SECTION */
 
 #about {
   position: relative;
+  will-change: opacity;
+    opacity: 0.93734;
+    transform: translate3d(0px, -12.5064vh, 0px) scale3d(0.893734, 0.893734, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
+    transform-style: preserve-3d;
 }
 
 .about-containers {
@@ -303,8 +307,12 @@ section {
   background: white;
   border-radius: 2rem;
   border: rgb(62, 6, 6) 0.1rem solid;
-  border-color: rgb(62, 6, 6,0.5);
+  border-color: rgb(62, 6, 6, 0.5);
   text-align: center;
+}
+
+.details-container i {
+  font-size: 10px;
 }
 
 .section-container {
@@ -313,8 +321,9 @@ section {
 }
 
 .section__pic-container {
-  height: 400px;
-  width: 400px;
+  height: 300px;
+  width: 300px;
+  border-radius: 50%;
   margin: auto 0;
 }
 
@@ -325,7 +334,7 @@ section {
 }
 
 .experience-sub-title {
-  color: rgb(62, 6, 6,0.5);
+  color: rgb(62, 6, 6, 0.5);
   font-weight: 600;
   font-size: 1.75rem;
   margin-bottom: 2rem;
@@ -364,7 +373,7 @@ article .icon {
 }
 
 .color-container {
-  border-color: rgb(62, 6, 6,0.5);
+  border-color: rgb(62, 6, 6, 0.5);
   background: white;
 }
 
@@ -381,7 +390,7 @@ article .icon {
 
 .project-btn {
   color: rgb(62, 6, 6);
-  border-color: rgb(62, 6, 6,0.5);
+  border-color: rgb(62, 6, 6, 0.5);
 }
 
 /* CONTACT */
@@ -398,7 +407,7 @@ article .icon {
   justify-content: center;
   border-radius: 2rem;
   border: rgb(62, 6, 6) 0.1rem solid;
-  border-color: rgb(62, 6, 6,0.5);
+  border-color: rgb(62, 6, 6, 0.5);
   background: (250, 250, 250);
   margin: 2rem auto;
   padding: 0.5rem;
@@ -428,9 +437,27 @@ article .icon {
 
 footer {
   height: 26vh;
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  text-align: center;
   margin: 0 1rem;
+  position: relative;
+  bottom: 20px;
 }
 
 footer p {
   text-align: center;
+  font-size: small;
+}
+
+footer img {
+  width: 50px;
+  height: 50px;
+  padding: 0.5rem;
+  position: relative;
+  bottom: 1rem;
+  left: 1rem;
+  border: 1px solid brown;
+  border-radius: 50%;
 }
