--- a/pCards.css
+++ b/pCards.css
@@ -158,7 +158,7 @@
 }
 
 .front .inner span {
-  color: rgba(255, 255, 255, 0.7);
+  color: whitesmoke;
   font-family: "Montserrat";
   font-weight: 300;
 }
