--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -38,12 +38,21 @@
     margin: 0 5%;
   }
   .section__pic-container {
-    width: 275px;
-    height: 275px;
+    width: 300px;
+    height: 300px;
     margin: 0 auto 2rem;
   }
   .about-containers {
     margin-top: 0;
+    flex-direction: column;
+  }
+  .cols {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .col {
+    width: 100%;
   }
 }
 
@@ -54,7 +63,7 @@
   }
   #profile {
     height: 83vh;
-    margin-bottom: 0;
+    margin-bottom: 100px;
   }
   article {
     font-size: 1rem;
@@ -87,8 +96,8 @@
     text-align: center;
   }
   .section__pic-container {
-    width: auto;
-    height: 46vw;
+    /* width: auto;
+    height: 55vw; */
     justify-content: center;
   }
   .section__text__p2 {
