--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -62,6 +62,9 @@
     font-size: small;
     width: 75%;
   }
+  .menu-links a {
+    font-size: medium;
+  }
 }
 
 @media screen and (max-width: 600px) {
@@ -130,6 +133,9 @@
     font-size: small;
     width: 75%;
   }
+  .menu-links a {
+    font-size: medium;
+  }
 }
 
 @media screen and (max-width: 400px) {
@@ -137,5 +143,8 @@
     margin-top: 15rem;
     font-size: small;
     width: 75%;
+  }
+  .menu-links a {
+    font-size: medium;
   }
 }
