--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -10,6 +10,9 @@
   #projects {
     height: fit-content;
   }
+  .contCaption {
+    margin-top: 5rem;
+  }
 }
 
 @media screen and (max-width: 1200px) {
